== LATEST

 * Support use as a plugin.
 * New Relic support.

== 0.0.11 2010-05-10

 * Ensure authenticity token is initialized properly.

== 0.0.10 2010-05-05

 * Fix padding comment.

== 0.0.9 2010-04-29

 * Add support for Thin on Ruby 1.8.6.

== 0.0.8 2010-04-28

 * Ensure Rack::Chunked is at the base of the middleware stack.

== 0.0.7 2010-04-28

 * Fix threshold when content type is not set before rendering.

== 0.0.6 2010-04-28

 * Fix #render_to_string.

== 0.0.5 2010-04-27

 * Automatically add Rack::Chunked to middleware stack.

== 0.0.4 2010-04-26

 * Add when_streaming_template callback. Called after an action that
   streams a template.
 * Ensure flash is swept before headers are output.

== 0.0.3 2010-04-23

 * Fix #render calls which don't render templates (e.g. :text => '').

== 0.0.2 2010-04-21

 * Thin support.

== 0.0.1 2010-04-13

 * Hi.