@@ -1,5 +1,6 @@
 == LATEST
 
+ * Replace prelayouts with :progressive => true option to #layout.
  * Support use as a plugin.
  * New Relic support.
 
